# PicoTerminal

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  use.txt
